# medulla

./: .gitignore  84192274.0@jobsub01.fnal.gov.tgz  simple.cmd  simple.sh  submit.sh
batch/: medulla.py  submit.sh  sys_template.toml  utilities.py
selection/: CMakeLists.txt
selection/include/: cuts.h  event_variables.h  framework.h  mctruth.h  particle_variables.h  utilities.h  variables.h
selection/src/: framework.cc  main.cc
selection/toml/: 1muNp0pi.toml  1muNp0pi_N>=1.toml  1muNp0pi_N>=2.toml  1muNp0pi_Nge1.toml  1muNp0pi_Nge1_contained.toml  1muNp0pi_Nge1_contained_signal_type.toml  1muNp0pi_Nge1_uncontained.toml  1muNp0pi_Nge1_uncontained_cuts.toml  1muNp0pi_Nge1_uncontained_only.toml  1muNp0pi_Nge1_uncontained_protonThresholdTest.toml  1muNp0pi_Nge1_uncontained_sideband.toml  1muNp0pi_Nge1_uncontained_sideband_no_pions.toml  1muNp0pi_Nge1_uncontained_signal.toml  1muNp0pi_Nge1_uncontained_signalStudies.toml  1muNp0pi_Nge1_uncontained_signalStudies_postFSI.toml  1muNp0pi_Nge1_uncontained_signal_type.toml  1muNp0pi_Nge2.toml  1muNp0pi_Nge2_contained.toml  1muNp0pi_uncontained_cuts.toml  charged_pion.toml  zero_pion.toml
selection/toml/__ARCHIVE__/: 1muNp0pi_Nge1_contained.toml  1muNp0pi_Nge1_contained_signal_type.toml  1muNp0pi_Nge1_uncontained_sideband.toml  1muNp0pi_Nge1_uncontained_sideband_no_pions.toml  cosmics.toml  example.toml  icarus_disappearance.toml  michel.toml  particles.toml
spineplot/: analysis.py  cfg.toml  efficiency.py  figure.py  sample.py  spectra1d.py  spectra2d.py  systematic.py  utilities.py
spineplot/configurations/common/: styles.toml  variables.toml  variables_contained.toml  variables_uncontained.toml
spineplot/examples/: cfg.toml  chargedpion.ipynb  chargedpion_kiyoung.ipynb  example.ipynb
spineplot/myAnalysis/: 1muNp0pi.ipynb  1muNp0pi_N>=2.ipynb  1muNp0pi_Nge1_contained.ipynb  1muNp0pi_Nge1_uncontained.ipynb  1muNp0pi_Nge2.ipynb  1muNp0pi_sideband_uncontained.ipynb  1muNp0pi_uncontained.ipynb  cfg.toml  csda_mcs_studies.ipynb  efficiency.ipynb  zero_pion.ipynb
spineplot/myAnalysis/1muNp0pi_Nge1_contained/: purity.toml
spineplot/myAnalysis/1muNp0pi_Nge1_contained/dalphaT/: dalphaT.toml
spineplot/myAnalysis/1muNp0pi_Nge1_contained/dphiT/: dphiT.toml
spineplot/myAnalysis/1muNp0pi_Nge1_contained/leading_muon_length/: leading_muon_length.toml
spineplot/myAnalysis/1muNp0pi_Nge1_contained/leading_muon_momentum/: leading_muon_momentum.toml
spineplot/myAnalysis/1muNp0pi_Nge1_contained/opening_angle/: opening_angle.toml
spineplot/myAnalysis/1muNp0pi_Nge1_sideband_uncontained/dalphaT/: dalphaT.toml
spineplot/myAnalysis/1muNp0pi_Nge1_sideband_uncontained/dpT/: dpT.toml
spineplot/myAnalysis/1muNp0pi_Nge1_sideband_uncontained/dphiT/: dphiT.toml
spineplot/myAnalysis/1muNp0pi_Nge1_sideband_uncontained/leading_muon_length/: leading_muon_length.toml
spineplot/myAnalysis/1muNp0pi_Nge1_sideband_uncontained/leading_muon_momentum/: leading_muon_momentum.toml
spineplot/myAnalysis/1muNp0pi_Nge1_sideband_uncontained/leading_muon_polar_angle/: leading_muon_polar_angle.toml
spineplot/myAnalysis/1muNp0pi_Nge1_sideband_uncontained/leading_proton_momentum/: leading_proton_momentum.toml
spineplot/myAnalysis/1muNp0pi_Nge1_sideband_uncontained/opening_angle/: opening_angle.toml
spineplot/myAnalysis/1muNp0pi_Nge1_sideband_uncontained/vertex_x/: vertex_x.toml
spineplot/myAnalysis/1muNp0pi_Nge1_sideband_uncontained/vertex_y/: vertex_y.toml
spineplot/myAnalysis/1muNp0pi_Nge1_sideband_uncontained/vertex_z/: vertex_z.toml
spineplot/myAnalysis/1muNp0pi_Nge1_uncontained/: efficiency.toml
spineplot/myAnalysis/1muNp0pi_Nge1_uncontained/dalphaT/: dalphaT.toml
spineplot/myAnalysis/1muNp0pi_Nge1_uncontained/dpT/: dpT.toml  dpT_xSecUncertainty.toml
spineplot/myAnalysis/1muNp0pi_Nge1_uncontained/dphiT/: dphiT.toml
spineplot/myAnalysis/1muNp0pi_Nge1_uncontained/leading_muon_length/: leading_muon_length.toml
spineplot/myAnalysis/1muNp0pi_Nge1_uncontained/leading_muon_momentum/: leading_muon_momentum.toml
spineplot/myAnalysis/1muNp0pi_Nge1_uncontained/opening_angle/: opening_angle.toml
spineplot/myAnalysis/1muNp0pi_Nge1_uncontained/vertex_x/: vertex_x.toml
spineplot/myAnalysis/1muNp0pi_Nge1_uncontained/vertex_y/: vertex_y.toml
spineplot/myAnalysis/1muNp0pi_Nge1_uncontained/vertex_z/: vertex_z.toml
spineplot/myAnalysis/1muNp0pi_Nge1_uncontained_old/: 1muNp0pi_Nge1_uncontained.ipynb
spineplot/myAnalysis/__ARCHIVE__/: 1muNp0pi_Nge1_muon_contained.ipynb  1muNp0pi_Nge1_muon_uncontained.ipynb
spineplot/myAnalysis/__ARCHIVE__/1muNp0pi_Nge1_contained/: efficiency.toml
spineplot/styles/: muon2024.mplstyle
systematics/: CMakeLists.txt  add_numi_flux_sys.py  add_numi_flux_sys_selected.py  add_numi_flux_sys_sideband.py  add_numi_flux_sys_signal.py  requirements.txt
systematics/src/: to_gundam.cc
systematics/toml/: NuMI_nu_mu_systematics.toml  NuMI_numu_gundam.toml  NuMi_nu_mu_systematics_newmc.toml
(+5 files in other folders)
